# lab2aaaaaaaaaaa

./: .gitignore  CMakeLists.txt  README.md  capt.txt  dfa_output.dot  diff.cpp  main.cpp  phone.txt  regex.patch  testing.sh
ast/: CMakeLists.txt  ast.cpp  ast.h
common/: CMakeLists.txt  common.cpp  common.h
dfa_sets/: CMakeLists.txt  dfa_sets.cpp  dfa_sets.h
regex/: CMakeLists.txt  regex.h
regexTokenizer/: CMakeLists.txt  regexTokenizer.cpp  regexTokenizer.h
tests/: alter.txt  alter_single.txt  capt_many.txt  capture.txt  cat_many.txt  comb.txt  comb2.txt  comb3.txt  comb4.txt  comb5.txt  complex.txt  escape.txt  inv.txt  kline.txt  priority.txt  quest.txt
tree_output/: tree_output.dot
